--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "start:prod": "node server.js",
     "client": "cd client && npm run start",
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
-    "build": "cd client && npm run build",
+    "build": "react-scripts build",
     "heroku-postbuild": "npm run build"
   },
   "repository": {
