--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
-    "serve": "^12.0.0"
+    "serve": "^12.0.0",
+    "update": "^0.7.4"
   }
 }
