--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "MERN app for google book search",
   "main": "server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run prod || npm run dev",
-    "prod": "node server.js",
-    "dev": "react-scripts start",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
@@ -24,8 +24,6 @@
     "dotenv": "^10.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.3.16",
-    "serve": "^12.0.0",
-    "update": "^0.7.4"
+    "mongoose": "^5.3.16"
   }
 }
